@@ -36,6 +36,16 @@ Info: The field on this line of <tt>debian/control</tt> has whitespace
  in the syntax of Debian control files, but as Policy says, it is
  conventional to put a single space after the colon.
 
+Tag: debian-control-has-dbgsym-package
+Severity: serious
+Certainty: certain
+Ref: #858117, https://wiki.debian.org/DebugPackage
+Info: The <tt>debian/control</tt> file includes declaration of
+ normally autogenerated -dbgsym package.
+ .
+ You should delete this package from <tt>debian/control</tt>
+ and use autogeneration.
+
 Tag: debian-control-repeats-field-name-in-value
 Severity: normal
 Certainty: possible
