@@ -84,6 +84,16 @@ Description: Description: {$description}
  things.  It should not be installed like a regular package.  It may
  be an empty package.
 
+Package: {$source}-dbgsym
+Section: debug
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: Description: dbg-sym
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+
 Package: {$source}-udeb
 Section: debian-installer
 Package-Type: udeb
