@@ -9,6 +9,8 @@ lintian (2.5.51) UNRELEASED; urgency=medium
     + [BR] Apply patch by Simon McVittie to detect unreleased package
       uploaded to unstable and  mismatched .changes and
       Changes: distribution.  (Closes: #540294).
+  * checks/control.{desc,pm}:
+    + [BR] Detect dbgsym package in control file.  (Closes: #858117).
   * checks/cruft.{desc,pm}:
     + [BR] Document long line tagged source-is-missing as a feature
       not a bug.  (Closes: #849470).
